I only need SAT-is-NP-complete proof and some reductions
My head is currently spinning and considers repeated wall-contact. I better
take a break.

--- a/text/biblio.bib
+++ b/text/biblio.bib
@@ -94,3 +94,38 @@
   pages={409--478},
   year={1983}
 }
+@book{downey1999parameterized,
+  title={Parameterized complexity},
+  author={Downey, R.G. and Fellows, M.R.},
+  volume={3},
+  year={1999},
+  publisher={springer New York}
+}
+@article{veldhuizen2003c++,
+  title={C++ templates are turing complete},
+  author={Veldhuizen, T.L.},
+  journal={Available at citeseer. ist. psu. edu/581150. html},
+  year={2003}
+}
+@book{russell1995artificial,
+  title={Artificial intelligence: a modern approach},
+  author={Russell, S.J. and Norvig, P.},
+  year={2009},
+  volume={3},
+  publisher={Prentice hall Englewood Cliffs, NJ}
+}
+@book{sipser2006introduction,
+  title={Introduction to the Theory of Computation},
+  author={Sipser, M.},
+  volume={27},
+  year={2006},
+  publisher={Thomson Course Technology Boston, MA}
+}
+@inproceedings{impagliazzo1995personal,
+  title={A personal view of average-case complexity},
+  author={Impagliazzo, R.},
+  booktitle={Structure in Complexity Theory Conference, 1995., Proceedings of Tenth Annual IEEE},
+  pages={134--147},
+  year={1995},
+  organization={IEEE}
+}
