--- a/text/main.tex
+++ b/text/main.tex
@@ -54,6 +54,7 @@
 \newcommand{\citationneeded}{{\em (citation needed) } }
 \newcommand{\lineofthought}[1]{{\bf [#1] }}
 \newcommand{\TODO}{\ensuremath{\left<\mathbf{TODO}\right> }}
+\newcommand{\DONE}{}
 
 % Disabled Note Commands
 \newcommand{\timeestimation}[1]{}
